manifests/modules/networking/vpc-lattice/controller/deploy-namesystem.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    control-plane: gateway-api-controller
  name: system
